feat: add coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ cache:
     - node_modules
 script:
   - npm run lint
+  - npm run test:cov
+after_script: "npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
